--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,32 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+
+# .gitignore
+
+# 1. Les dépendances (TROP LOURD, ne jamais envoyer ça)
+node_modules/
+.pnp
+.pnp.js
+
+# 2. Le dossier de build (Généré automatiquement, inutile d'envoyer)
+.next/
+out/
+build/
+dist/
+
+# 3. Les fichiers systèmes (Inutiles pour les autres)
+.DS_Store
+*.pem
+
+# 4. Les logs d'erreurs
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# 5. Les variables d'environnement (SECRETS ! Ne jamais envoyer)
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
